[#159998853] Fix bug: Case table expand/collapse broken by 0455
Also address eslint kvetch.

--- a/apps/dg/resources/dg.css
+++ b/apps/dg/resources/dg.css
@@ -1223,6 +1223,7 @@ input.dg-editor-text {
     display: flex;
     align-items: center;
     justify-content: center;
+    pointer-events: none;
 }
 
 .dg-table-drop-target .sc-label-view:lang(zh) {
